Thu Feb 19 16:08:15 1998  Richard Henderson  <rth@cygnus.com>

	* listing.c (list_symbol_table): Categorize symbols by
	undefined_section rather than sy_frag->line == NULL.

start-sanitize-sky
Thu Feb 19 02:17:03 1998  Doug Evans  <devans@charmed.cygnus.com>

	* config/tc-dvp.c (LOCAL_LABEL_PREFIX,END_LABEL_PREFIX): New macros.
	(inline_dmadata): Renamed from s_dmadata_implied.
	(assemble_one_insn): Rewrite dma operand processing.
	(md_apply_fix3): Handle DVP_OPERAND_DMA_NEXT.
	(unique_name,setup_autocount): New functions.

	* config/tc-dvp.c: Include stdarg.h/varargs.h.
	(md_pseudo_table): Add .word.
	(assemble_dma): Set alignment to 16 bytes.  Enable code that records
	fixups.
	(assemble_one_insn): Handle DVP_OPERAND_DMA_{ADDR,AUTOCOUNT}.
	(md_apply_fix3): Handle DVP_OPERAND_DMA_ADDR.
	(parse_dma_addr_autocount): Renamed from parse_dma_ptr_autocount.
	Rewrite.
	(eval_expr): New function.
	(create_label,create_colon_label): New function.
	(s_enddmadata): Rewrite.

end-sanitize-sky
Wed Feb 18 23:39:46 1998  Richard Henderson  <rth@cygnus.com>

	* Makefile.am (install-exec-local): Install properly when ln
	fails or tooldir == prefix.

start-sanitize-m32rx
Wed Feb 18 18:11:42 1998  Nick Clifton  <nickc@cygnus.com>

	* config/tc-m32r.c (first_writes_to_seconds_operands): Special
	handling of updates to the condition bit as this is shadow by
	several registers.
end-sanitize-m32rx
start-sanitize-sky
Wed Feb 18 15:49:56 1998  Doug Evans  <devans@canuck.cygnus.com>

	* config/tc-dvp.c (parse_float): New function.
	(assemble_vu): Handle loi insns.
	(assemble_one_insn): Simplify suffix parsing.
	Handle DVP_OPERAND_FLOAT.  Allow FAKE arguments to have a parser
	handler.

end-sanitize-sky
start-sanitize-m32rx
Wed Feb 18 14:30:26 1998  Nick Clifton  <nickc@cygnus.com>

	* doc/c-m32r.texi (M32R-Opts): Add --Wp and --Wnp.

	* doc/as.texinfo (Overview): Add --Wp and --Wnp.

	* config/tc-m32r.c (md_longopts): Accept --Wp as an abbreviation